fix: fix missing background color in datepicker theme

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
 
-@use '@angular/material' as mat;
+@use "@angular/material" as mat;
+@use "../projects/datetime-picker/src/lib/_datepicker-theme.scss" as
+  datetime-picker;
 @include mat.core();
 
-@import '@angular/material/prebuilt-themes/indigo-pink.css';
-@import '~highlight.js/styles/github.css';
-
+@import "@angular/material/prebuilt-themes/indigo-pink.css";
+@import "~highlight.js/styles/github.css";
 
 body {
   margin: 0;
@@ -19,7 +20,9 @@ pre {
   overflow-x: auto;
   padding: 20px;
   white-space: pre-wrap;
-  font-family: Roboto Mono, monospace;
+  font-family:
+    Roboto Mono,
+    monospace;
 
   code {
     font-size: 100%;
@@ -27,17 +30,18 @@ pre {
 }
 
 $ngxMat-palette: (
-  50: #009B77,
-  100: #009B77,
-  200: #009B77,
-  300: #009B77,
-  400: #009B77,
-  500: #009B77,
-  600: #009B77,
-  700: #009B77,
-  800: #009B77,
-  900: #009B77,
-  contrast: (50: white,
+  50: #009b77,
+  100: #009b77,
+  200: #009b77,
+  300: #009b77,
+  400: #009b77,
+  500: #009b77,
+  600: #009b77,
+  700: #009b77,
+  800: #009b77,
+  900: #009b77,
+  contrast: (
+    50: white,
     100: white,
     200: white,
     300: white,
@@ -47,18 +51,22 @@ $ngxMat-palette: (
     700: white,
     800: white,
     900: white,
+  ),
+);
+
+$ngxMat-primary: mat.define-palette(mat.$indigo-palette, 500);
+$ngxMat-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+
+$ngxMat-theme: mat.define-light-theme(
+  (
+    color: (
+      primary: $ngxMat-primary,
+      accent: $ngxMat-accent,
+    ),
+    typography: mat.define-typography-config(),
+    density: 0,
   )
 );
 
-$ngxMat-primary: mat.define-palette($ngxMat-palette, 500);
-$ngxMat-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
-
-
-$ngxMat-theme: mat.define-light-theme((color: (primary: $ngxMat-primary,
-        accent: $ngxMat-accent,
-      ),
-      typography: mat.define-typography-config(),
-      density: 0,
-    ));
-
 @include mat.all-component-themes($ngxMat-theme);
+@include datetime-picker.theme($ngxMat-theme);
